--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+>
 <head th:replace="~{client/fragments/head :: heads(pageTitle='Project Index')}"></head>
 <body>
 
@@ -129,40 +129,20 @@
 <div class="container-fluid service py-5">
     <div class="container py-5">
         <div class="row g-4 justify-content-center">
-            <div class="col-md-6 col-lg-4">
+            <!-- Iterate over the list of coupons -->
+            <div th:each="coupon, iterStat : ${coupons}" class="col-md-6 col-lg-4" th:if="${iterStat.index lt 3}">
                 <div class="service-item bg-dark rounded border border-secondary">
                     <div class="px-4 rounded-bottom">
                         <div class="service-content bg-primary text-center p-4 rounded">
-                            <h5 class="text-white">Tết sum vầy ăn no say</h5>
-                            <h3 class="text-white alert-link">20OFF</h3>
-                            <p class="text-center text-white">Giảm ngay 20% giá trị đơn hàng</p>
+                            <h5 class="text-white" th:text="${coupon.couponName}">Coupon Name</h5>
+                            <h3 class="text-white alert-link" th:text="${coupon.couponCode}">Coupon Code</h3>
+                            <p class="text-center text-white" th:text="${coupon.couponDescription}">Coupon
+                                Description</p>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-6 col-lg-4">
-                <div class="service-item bg-primary rounded border border-secondary">
-                    <div class="px-4 rounded-bottom">
-                        <div class="service-content bg-white text-center p-4 rounded">
-                            <h5 class="text-primary">Tết sum vầy ăn no say</h5>
-                            <h3 class="text-primary alert-link">20OFF</h3>
-                            <p class="text-primary text-center">Giảm ngay 20% giá trị đơn hàng</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <div class="service-item bg-dark rounded border border-secondary">
-                    <div class="px-4 rounded-bottom">
-                        <div class="service-content bg-primary text-center p-4 rounded">
-                            <h5 class="text-white">Tết sum vầy ăn no say</h5>
-                            <h3 class="text-white alert-link">20OFF</h3>
-                            <p class="text-center text-white">Giảm ngay 20% giá trị đơn hàng</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!-- End iteration -->
         </div>
     </div>
 </div>
@@ -647,11 +627,12 @@
             <div class="col" th:each="blog : ${blogs}">
                 <div class="card h-100">
                     <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}">
-                        <img class="card-img-top img-fluid" th:src="@{'/' + ${blog.getBlog_img()}}" th:alt="${blog.getBlog_title()}" style="object-fit: cover; height: 200px;"/>
+                        <img class="card-img-top img-fluid" th:src="@{'/' + ${blog.getBlog_img()}}"
+                             th:alt="${blog.getBlog_title()}" style="object-fit: cover; height: 200px;"/>
                     </a>
                     <div class="card-body">
                         <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}">
-                            <h5 class="card-title" th:text="${blog.getBlog_title()}" >Bài viết 1</h5>
+                            <h5 class="card-title" th:text="${blog.getBlog_title()}">Bài viết 1</h5>
                         </a>
                         <p class="card-text" th:text="${blog.getBlog_content()}">
                             This is a longer card with supporting text below as a natural lead-in to additional content.
