--- a/src/main/resources/templates/admin/coupon/couponList.html
+++ b/src/main/resources/templates/admin/coupon/couponList.html
@@ -46,19 +46,19 @@
                         <div class="card-body">
                             <!-- Coupon search -->
                             <div class="flex-grow-1 mb-3 d-flex justify-content-start">
-                                <button type="submit" class="btn btn-primary mr-2" onclick="searchCoupon()">Tìm kiếm</button>
-                                <button type="submit" class="btn btn-info mx-2" onclick="searchDefault()">Mặc định</button>
+                                <button type="submit" class="btn btn-primary mr-2" onclick="searchCoupon()">Search</button>
+                                <button type="submit" class="btn btn-info mx-2" onclick="searchDefault()">Set default</button>
                             </div>
 
                             <!-- Search Entries -->
                             <form id="couponSearch" th:object="${couponSearch}" class="d-flex justify-content-around">
                                 <div class="mb-2 pr-2 ">
-                                    <label class="form-label" for="couponNameCode">Tên/Mã</label>
+                                    <label class="form-label" for="couponNameCode">Name/Code</label>
                                     <input type="text"
                                            class="form-control"
                                            id="couponNameCode"
                                            th:field="*{couponNameCode}"
-                                           placeholder="Tên mã hoặc mã giảm giá"
+                                           placeholder="Coupon name or code"
                                            th:class="${#fields.hasErrors('couponNameCode')}? 'form-control fieldError' : 'form-control'"
                                            maxlength="20"/>
                                     <p th:if="${#fields.hasErrors('couponNameCode')}" th:errors="*{couponNameCode}" th:errorclass="errorMessage"></p>
@@ -66,41 +66,35 @@
 
                                 <div class="d-flex">
                                     <div class="pr-2">
-                                        <label class="form-label">Loại mã</label>
+                                        <label class="form-label">Coupon Type</label>
                                         <select class="form-select" th:field="*{typeCoupon}" id="typeCoupon">
                                             <option value="" selected></option>
-                                            <option value="DIRECT">DIRECT</option>
-                                            <option value="PERCENT">PERCENT</option>
+                                            <option th:each="type : ${T(vn.hdweb.team9.domain.entity.TypeCoupon).values()}"
+                                                    th:value="${type}"
+                                                    th:text="${type}">option
+                                            </option>
                                         </select>
                                     </div>
                                 </div>
 
                                 <div class="mb-2 pr-2">
-                                    <label class="form-label" for="datePicker-startDate">Ngày bắt đầu</label>
+                                    <label class="form-label" for="datePicker-startDate">Start Date</label>
                                     <input type="date"
                                            class="form-control"
                                            id="datePicker-startDate"
                                            th:field="*{startDate}"
                                            th:class="${#fields.hasErrors('startDate')}? 'form-control fieldError' : 'form-control'"/>
                                     <p th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}" th:errorclass="errorMessage"></p>
-                                    <script>
-                                        <!--start date min is today-->
-                                        document.getElementById("datePicker-startDate").min = new Date().toISOString().slice(0, 16);
-                                    </script>
                                 </div>
 
                                 <div class="mb-2 pr-2">
-                                    <label class="form-label" for="datePicker-endDate">Ngày kết thúc</label>
+                                    <label class="form-label" for="datePicker-endDate">End Date</label>
                                     <input type="date"
                                            class="form-control"
                                            id="datePicker-endDate"
                                            th:field="*{endDate}"
                                            th:class="${#fields.hasErrors('endDate')}? 'form-control fieldError' : 'form-control'"/>
                                     <p th:if="${#fields.hasErrors('endDate')}" th:errors="*{endDate}" th:errorclass="errorMessage"></p>
-                                    <script>
-                                        <!--end date min is today-->
-                                        document.getElementById("datePicker-endDate").min = new Date().toISOString().slice(0, 16);
-                                    </script>
                                 </div>
                             </form>
                         </div>
@@ -117,14 +111,14 @@
                                             <thead>
                                             <!-- Coupon ltable header -->
                                             <tr>
-                                                <th>Mã</th>
-                                                <th>Tên</th>
-                                                <th>Loại mã</th>
-                                                <th>Giá trị</th>
-                                                <th>Số lượng</th>
-                                                <th>Ngày bắt đầu</th>
-                                                <th>Ngày kết thúc</th>
-                                                <th>Hành động</th>
+                                                <th>Coupon code</th>
+                                                <th>Name</th>
+                                                <th>Type</th>
+                                                <th>Coupon value</th>
+                                                <th>Quantity</th>
+                                                <th>Start date</th>
+                                                <th>End date</th>
+                                                <th>Actions</th>
                                             </tr>
                                             </thead>
                                             <tbody class="table-border-bottom-0">
@@ -139,13 +133,13 @@
                                                     <strong>[[${coupon.couponName}]]</strong>
                                                 </td>
                                                 <td>
-                                                    <span class="badge me-1" th:classappend="${coupon.typeCoupon == T(vn.hdweb.team9.domain.entity.TypeCoupon).DIRECT ? 'bg-label-success' : 'bg-label-warning'}">
+                                                    <span class="badge me-1" th:classappend="${coupon.typeCoupon.toString().equalsIgnoreCase('DIRECT') ? 'bg-label-success' : 'bg-label-warning'}">
                                                         [[${coupon.typeCoupon}]]
                                                     </span></td>
                                                 </td>
                                                 <td>
                                                     <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                                    [[${coupon.typeCoupon == T(vn.hdweb.team9.domain.entity.TypeCoupon).DIRECT ? coupon.couponValue + 'vnđ' : coupon.couponValue + '%'}]]
+                                                    [[${coupon.typeCoupon.toString().equalsIgnoreCase('DIRECT') ? coupon.couponValue + '$' : coupon.couponValue + '%'}]]
                                                 </td>
                                                 <td>
                                                     <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
@@ -167,32 +161,35 @@
                                                             </button>
                                                         </form>
                                                         <!--Hidden form for delete coupon-->
-                                                        <form th:action="@{'/admin/coupon/delete/' + ${coupon.id}}" method="post" id="deleteCouponForm"></form>
-                                                        <button type="submit" class="btn btn-outline-danger btn-sm" onclick="confirmDelete()">
+                                                        <form th:action="@{'/admin/coupon/delete/' + ${coupon.id}}" method="post" id="deleteCouponForm">
+                                                        </form>
+                                                        <button type="submit" class="btn btn-outline-danger btn-sm" th:onclick="confirmDelete([[${coupon.id}]])">
                                                             <i class="bx bx-trash me-1"></i>
                                                         </button>
+
+                                                        <!-- Delete Confirmation Modal -->
+                                                        <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+                                                            <div class="modal-dialog">
+                                                                <div class="modal-content">
+                                                                    <div class="modal-header">
+                                                                        <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Delete</h5>
+                                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                                    </div>
+                                                                    <div class="modal-body">
+                                                                        Are you sure you want to delete this information? This can not be undone!
+                                                                    </div>
+                                                                    <div class="modal-footer">
+                                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                                        <button type="submit" class="btn btn-danger" onclick="submitDeleteForm()">Delete</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
                                                     </div>
                                                 </td>
                                             </tr>
 
-                                            <!-- Delete Confirmation Modal -->
-                                            <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
-                                                <div class="modal-dialog">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h5 class="modal-title" id="deleteConfirmationModalLabel">Xác nhận</h5>
-                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            Bạn có muốn xóa mã giảm giá này? Lưu ý: Hành động này không thể hoàn tác.
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
-                                                            <button type="submit" class="btn btn-danger" onclick="submitDeleteForm()">Xóa</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
                                             </tbody>
                                         </table>
                                     </div>
@@ -217,12 +214,17 @@
 </body>
 
 <script>
-    function confirmDelete() {
+    var globalId;
+
+    function confirmDelete(id) {
+        console.log(id);
+        globalId = id;
         $('#deleteConfirmationModal').modal('show');
     }
 
     function submitDeleteForm() {
-        $('#deleteCouponForm').submit();
+        <!--        $('#deleteCouponForm').submit();-->
+        window.location = '/admin/coupon/delete/' + globalId;
     }
 
     function handleKeyPress(event) {
@@ -241,11 +243,11 @@
     function searchDefault() {
         // Clear all search fields
         document.getElementById("couponNameCode").value = "",
-        document.getElementById("typeCoupon").value = "",
-        document.getElementById("datePicker-startDate").value = "",
-        document.getElementById("datePicker-endDate").value = "",
-        // Trigger the search function after clearing
-        searchCoupon();
+            document.getElementById("typeCoupon").value = "",
+            document.getElementById("datePicker-startDate").value = "",
+            document.getElementById("datePicker-endDate").value = "",
+            // Trigger the search function after clearing
+            searchCoupon();
     }
 
     function handleCouponNumberInput(input) {
@@ -258,5 +260,3 @@
 </script>
 
 </html>
-
-
