--- a/src/main/resources/templates/client/fragments/slider_index.html
+++ b/src/main/resources/templates/client/fragments/slider_index.html
@@ -12,9 +12,9 @@
                 <h4 class="mb-3 text-secondary">Đa dạng ẩm thực Việt</h4>
                 <h1 class="mb-5 display-3 text-primary">Đặt Đồ ăn và cùng thưởng thức...</h1>
                 <div class="position-relative mx-auto">
-                    <form th:action="@{/search}" method="get">
-                        <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="number"
-                               placeholder="Tìm kiếm món ăn, cửa hàng...">
+                    <form th:action="@{/restaurants/foods}" method="get">
+                        <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="text"
+                               placeholder="Tìm kiếm món ăn, cửa hàng..." name="foodName">
                         <button type="submit"
                                 class="btn btn-primary border-2 border-primary py-3 px-4 position-absolute rounded-pill text-white h-100"
                                 style="top: 0; right: 25%;">Tìm ngay
