--- a/src/main/resources/templates/admin/ratingRestaurant/ratingList.html
+++ b/src/main/resources/templates/admin/ratingRestaurant/ratingList.html
@@ -24,6 +24,10 @@
                         <h5 class="card-header" th:text="${title}">Title</h5>
                         <div class="card-body">
                             <div class="card-content ">
+                                <div th:replace="admin/ratingRestaurant/overview.html :: overview"></div>
+
+                            </div>
+                            <div class="card-content ">
                                 <!--Nhớ bỏ min-vh-100 -->
                                 <div th:replace="admin/ratingRestaurant/table.html :: table"></div>
                             </div>
