--- a/src/main/resources/templates/client/blogs.html
+++ b/src/main/resources/templates/client/blogs.html
@@ -58,7 +58,7 @@
                             </a>
                             <div class="flex-grow-1 ms-3">
                                 <h5 class="card-title">
-                                    <a th:href="@{${'/blog/' +blog.getSlug()}}" th:text="${blog.getBlog_title()}" style="font-size: 18px;"></a>
+                                    <a th:href="@{${'/blog/detail/' +blog.getSlug()}}" th:text="${blog.getBlog_title()}" style="font-size: 18px;"></a>
                                 </h5>
                             </div>
                         </div>
