--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -519,7 +519,7 @@
 <!-- List Restaurant End -->
 
 <!-- Rating Start -->
-<div class="container-fluid testimonial py-5">
+<div th:if="${ratings}" class="container-fluid testimonial py-5">
     <div class="container py-5">
         <div class="testimonial-header text-center">
             <h4 class="text-primary">Khách hàng</h4>
@@ -527,84 +527,31 @@
         </div>
         <div class="owl-carousel testimonial-carousel">
             <!-- 1 -->
-            <div class="testimonial-item img-border-radius bg-light rounded p-4">
-                <div class="position-relative">
-                    <i class="fa fa-quote-right fa-2x text-secondary position-absolute"
-                       style="bottom: 30px; right: 0;"></i>
-                    <div class="mb-4 pb-4 border-bottom border-secondary">
-                        <p class="mb-0" th:text="${rating0.content}"> content
-                        </p>
-                    </div>
-                    <div class="d-flex align-items-center flex-nowrap">
-                        <div class="bg-secondary rounded">
-                            <img th:src="${rating0.userAvatar}" class="img-fluid rounded"
-                                 style="width: 100px; height: 100px;" alt="">
+            <th:block th:each="item : ${ratings}">
+                <div class="testimonial-item img-border-radius bg-light rounded p-4">
+                    <div class="position-relative">
+                        <i class="fa fa-quote-right fa-2x text-secondary position-absolute"
+                           style="bottom: 30px; right: 0;"></i>
+                        <div class="mb-4 pb-4 border-bottom border-secondary">
+                            <p class="mb-0" th:text="${item.content}"> content
+                            </p>
                         </div>
-                        <div class="ms-4 d-block">
-                            <h4 class="text-dark" th:text="${rating0.userFullName}">Client Name</h4>
-                            <p class="m-0 pb-3" th:text="${rating0.restaurantName}">Ở Food nào</p>
-                            <div class="d-flex pe-5">
-                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = ${rating0.rateStar})}"></span>
-
+                        <div class="d-flex align-items-center flex-nowrap">
+                            <div class="bg-secondary rounded">
+                                <img th:src="${item.userAvatar}" class="img-fluid rounded"
+                                     style="width: 100px; height: 100px;" alt="">
+                            </div>
+                            <div class="ms-4 d-block">
+                                <h4 class="text-dark" th:text="${item.userFullName}">Client Name</h4>
+                                <p class="m-0 pb-3" th:text="${item.restaurantName}">Ở Food nào</p>
+                                <div class="d-flex pe-5">
+                                    <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = ${item.rateStar})}"></span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- 2 -->
-            <div class="testimonial-item img-border-radius bg-light rounded p-4">
-                <div class="position-relative">
-                    <i class="fa fa-quote-right fa-2x text-secondary position-absolute"
-                       style="bottom: 30px; right: 0;"></i>
-                    <div class="mb-4 pb-4 border-bottom border-secondary">
-                        <p class="mb-0" th:text="${rating1.content}">Lorem Ipsum is simply dummy text of the printing Ipsum has been the
-                            industry's
-                            standard dummy text ever since the 1500s,
-                        </p>
-                    </div>
-                    <div class="d-flex align-items-center flex-nowrap">
-                        <div class="bg-secondary rounded">
-                            <img th:src="${rating1.userAvatar}"  class="img-fluid rounded"
-                                 style="width: 100px; height: 100px;" alt="">
-                        </div>
-                        <div class="ms-4 d-block">
-                            <h4 class="text-dark" th:text="${rating1.userFullName}">Client Name</h4>
-                            <p class="m-0 pb-3" th:text="${rating1.restaurantName}">Ở cửa hàng nào</p>
-                            <div class="d-flex pe-5">
-                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = ${rating1.rateStar})}"></span>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- 3 -->
-            <div class="testimonial-item img-border-radius bg-light rounded p-4">
-                <div class="position-relative">
-                    <i class="fa fa-quote-right fa-2x text-secondary position-absolute"
-                       style="bottom: 30px; right: 0;"></i>
-                    <div class="mb-4 pb-4 border-bottom border-secondary">
-                        <p class="mb-0"  th:text="${rating2.content}">Lorem Ipsum is simply dummy text of the printing Ipsum has been the
-                            industry's
-                            standard dummy text ever since the 1500s,
-                        </p>
-                    </div>
-                    <div class="d-flex align-items-center flex-nowrap">
-                        <div class="bg-secondary rounded">
-                            <img  th:src="${rating2.userAvatar}" class="img-fluid rounded"
-                                 style="width: 100px; height: 100px;" alt="">
-                        </div>
-                        <div class="ms-4 d-block">
-                            <h4 class="text-dark" th:text="${rating2.userFullName}">Client Name</h4>
-                            <p class="m-0 pb-3" th:text="${rating2.restaurantName}">Ở food nào</p>
-                            <div class="d-flex pe-5">
-                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = ${rating2.rateStar})}"></span>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </th:block>
         </div>
     </div>
 </div>
