--- a/src/main/resources/templates/client/ratingRestaurant/rating_form.html
+++ b/src/main/resources/templates/client/ratingRestaurant/rating_form.html
@@ -18,15 +18,51 @@
                             <label for="content" class="form-label">Nội dung</label>
                             <input type="text" class="form-control" id="content" name="content" required>
                         </div>
-                        <div class="mb-3">
-                            <label for="rateStar" class="form-label">Điểm đánh giá</label>
-                            <input type="number" class="form-control" id="rateStar" name="rateStar" min="0" max="5"
-                                   required>
+                        <!--                        <div class="mb-3">-->
+                        <!--                            <label for="rateStar" class="form-label">Điểm đánh giá</label>-->
+                        <!--                            <input type="number" class="form-control" id="rateStar" name="rateStar" min="0" max="5"-->
+                        <!--                                   required>-->
+                        <!--                        </div>-->
+                        <!--                        test-->
+                        <div class="mb-3 rating">
+                            <label>
+                                <input type="radio" th:name="${'rateStar'}" th:value="${1}" required/>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" th:name="${'rateStar'}" th:value="${2}" required/>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" th:name="${'rateStar'}" th:value="${3}" required/>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" th:name="${'rateStar'}" th:value="${4}" required/>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" th:name="${'rateStar'}" th:value="${5}" required/>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
                         </div>
+
                         <!-- pass restaurantId in value -->
-<!--                        <input type="hidden" name="restaurantId" value="1">-->
+                        <!--                        <input type="hidden" name="restaurantId" value="1">-->
                         <input type="hidden" name="restaurantId" th:value="${restaurantId}">
-                        <button type="submit" class="btn btn-primary">Thêm Đánh giá</button>
+                        <div class="mb-3 rating">
+                            <button type="submit" class="btn btn-primary">Thêm Đánh giá</button>
+                        </div>
                     </form>
                 </div>
             </div>
