--- a/src/main/resources/templates/client/user_orders.html
+++ b/src/main/resources/templates/client/user_orders.html
@@ -85,6 +85,7 @@
                             <tr th:unless="${orders.isEmpty()}" th:each="order : ${orders}">
                                 <td th:text="${order.getId()}"></td>
                                 <td th:text="${#temporals.format(order.getCreatedAt(), 'dd/MM/yyyy')}"></td>
+<!--                                res IdÎd-->
                                 <td>[[${order.getRestaurant().getRestaurantName()}]] - <span th:if="${!order.getRatingRestaurant()}">Rating</span></td>
                                 <td th:text="${order.getTotalBill()}"></td>
                                 <td>
@@ -97,7 +98,11 @@
                                 <td>
                                     <a th:href="@{/users/orders/{id}(id=${order.getId()})}" class="btn btn-primary">Chi tiết</a>
                                     <th:block th:if="${!order.getRatingRestaurant()}">
-                                        <a class="btn btn-primary">Rating</a>
+<!--                                        <a class="btn btn-primary">Rating</a>-->
+                                        <!-- Button trigger modal add Form -->
+<!--                                        -->
+                                     <div th:replace="~{client/ratingRestaurant/rating_form :: ratingForm(restaurantId= ${order.getRestaurant().getId()})}"></div>
+
                                     </th:block>
                                 </td>
                             </tr>
