--- a/src/main/resources/templates/client/fragments/rating_list.html
+++ b/src/main/resources/templates/client/fragments/rating_list.html
@@ -8,6 +8,12 @@
             </div>
             <div class="modal-body">
                 <!--                for each-->
+                <th:block th:if="${#lists.isEmpty(listValue)}">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <span class="h5">Chưa có đánh giá nào</span>
+                    </div>
+                </th:block>
+                <th:block th:unless="${#lists.isEmpty(listValue)}">
                 <div th:each="rating: ${listValue}">
                     <div class="border border-primary rounded bg-light p-1 m-1">
                         <div class="row d-flex">
@@ -25,204 +31,7 @@
                         </div>
                     </div>
                 </div>
-
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
-                <!--                <div class="border border-primary rounded bg-light p-1 m-1">-->
-                <!--                    <div class="row d-flex">-->
-                <!--                        <div class="col-3 d-flex justify-content-center align-items-center">-->
-                <!--                            <img src="/client/img/res/1.webp" class="rounded-circle" alt="" width="80" height="80">-->
-                <!--                        </div>-->
-                <!--                        <div class="col-9 d-flex flex-column justify-content-between overflow-hidden">-->
-                <!--                            <div class="d-flex"> <span class="h5">Nguyen Van A</span> - -->
-                <!--                                <span th:replace="~{client/fragments/elements/rating :: rating(rating_value = 4.3)}"></span>-->
-                <!--                            </div>-->
-                <!--                            <p>phục vụ tốt, món ăn ngon, giá cả hợp lý</p>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-
+                </th:block>
             </div>
         </div>
     </div>
